# yellowbear-website

./: README.md  TECHNICAL_SPEC.md
backend/yellowbear_api/: .env  Dockerfile  README.md  fly.toml  pyproject.toml  requirements.txt
backend/yellowbear_api/app/: __init__.py  auth.py  database.py  main.py  models.py
backend/yellowbear_api/app/models/: __init__.py  comment.py  indexes.py  quiz.py  quiz_stats.py  user.py
backend/yellowbear_api/app/routers/: auth.py  comments.py  oauth.py  quiz.py  stats.py
backend/yellowbear_api/tests/: test_quiz.py
frontend/yellowbear_web/: .env  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
frontend/yellowbear_web/public/: nginx.conf
frontend/yellowbear_web/src/: App.tsx
frontend/yellowbear_web/src/components/auth/: ProtectedRoute.tsx
frontend/yellowbear_web/src/components/comments/: CommentSection.tsx
frontend/yellowbear_web/src/components/layout/: Header.tsx
frontend/yellowbear_web/src/components/ui/: menubar.tsx  sidebar.tsx
frontend/yellowbear_web/src/lib/: api.ts
frontend/yellowbear_web/src/pages/auth/: Login.tsx  Register.tsx
frontend/yellowbear_web/src/pages/quiz/: Create.tsx  List.tsx  Play.tsx
